# lerobot-lancedb

./: .gitignore  404.html  CONTRIBUTING.md  GPU_BENCHMARK.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  tests.yml
benchmarks/: index.html  throughput.py
conversion/: index.html
docs/: README.md  benchmarks.md  conversion.md  examples.md  frames-format.md  index.md  video-format.md
examples/: aloha_loader_parity.py  benchmark_formats.py  conversion.py  index.html  train_and_eval_lance.py  train_with_lance.py
frames-format/: index.html
scripts/: release.sh
search/: search_index.json
src/lerobot_lancedb/: __init__.py  _spawn_compat.py  auto.py  benchmark.py  dataset.py  lance_video_dataset.py  writer.py
src/lerobot_lancedb/scripts/: convert_to_lance.py  convert_to_lance_video.py
tests/: test_dataset.py  test_hub.py
video-format/: index.html
