[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot-lancedb"
version = "0.2.1"
description = "Lance-backed datasets for LeRobot — frame-level random access on local disk and cloud (S3 / GCS / HF Hub / HF Buckets)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [
    { name = "Ayush Chaurasia", email = "ayush@lancedb.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["lerobot", "lancedb", "lance", "robotics", "datasets", "dataloader"]

dependencies = [
    # We subclass lerobot.datasets.LeRobotDataset so isinstance checks pass
    # for downstream training code (factories, samplers, etc.). The [dataset]
    # extra is required since lerobot 0.6 moved av/torchcodec behind it; on
    # older versions pip merely warns about the unknown extra.
    "lerobot[dataset]>=0.5.0",
    "datasets>=4.0.0,<5.0.0",
    "pyarrow>=21.0.0,<30.0.0",
    "lancedb>=0.20.0,<1.0.0",
    "pylance>=0.20.0,<1.0.0",
    "numpy>=2.0.0,<2.3.0",
    "Pillow>=10.0.0",
    "torch>=2.7,<2.11.0",
    "torchvision>=0.22.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.1.0,<9.0.0",
    "pytest-timeout>=2.4.0,<3.0.0",
    # lerobot>=0.6 moved av/torchcodec behind the [dataset] extra; tests import
    # lerobot.datasets which needs them. torchcodec pinned to 0.10.x: the 0.11.x
    # wheels on PyPI are built against unreleased torch and fail to load.
    "lerobot[dataset]>=0.5.0",
    "torchcodec==0.10.*",
]
dev = [
    "lerobot-lancedb[test,docs]",
    "ruff>=0.14.1",
    "build>=1.2",
    "twine>=5.1",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]

[project.scripts]
lerobot-convert-to-lance = "lerobot_lancedb.scripts.convert_to_lance:main"
lerobot-convert-to-lance-video = "lerobot_lancedb.scripts.convert_to_lance_video:main"

[project.urls]
homepage = "https://github.com/lancedb/lerobot-lancedb"
issues = "https://github.com/lancedb/lerobot-lancedb/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 110

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "PLC0415"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately gate imports behind ``pytest.importorskip`` for optional
# extras, so allowing local imports inside test functions is intentional.
"tests/*.py" = ["PLC0415"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
